<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:padding="10dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_logo"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10118737"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Moch Rifqi Ramdhani"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelas" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="IF-10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="10"
                android:minLines="3"
                android:scrollbars="vertical"
                android:text="Saya sangat menyukai Backend Developer dan Bahasa Pemograman
            Yang Ssaya Kuasai Adalah PHP"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/foto_li"
                android:adjustViewBounds="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kembali"
                android:onClick="linkToMain"
                android:backgroundTint="@color/btnprimary"/>



        </LinearLayout>








</ScrollView>